fix: new line & alignment

--- a/src/app/tabs/tabs.component.sass
+++ b/src/app/tabs/tabs.component.sass
@@ -7,8 +7,7 @@
   .tab-button-container
     display: flex
     flex-direction: row
-    justify-content: center
-    margin-bottom: 1em
+    padding-bottom: 1em
     width: 100%
     box-sizing: border-box
     overflow: auto
@@ -22,6 +21,13 @@
       cursor: pointer
       transition: all 0.3s ease-in-out
       color: inherit
+      white-space: nowrap
+
+      &:first-child
+        margin-left: auto
+
+      &:last-child
+        margin-right: auto
 
       &.active
         font-weight: bold
